tests/error/unknown_type.gw
#! [contains] unknown type
 #! hit the error with an unknown type
unknown_type variable;
